@@ -1,3 +1,7 @@
+2013-04-09  Neil Horman <nhorman@tuxdriver.com>
+	* contrib/xcscope/xcscope.el: Add find assignments search to 
+	xcscope.el
+
 2012-12-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/constants.h: Accept patch #2912267 to fix assumption about
